portfolio-website/src/components/contact/Contact.css
.ContactPage {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100vh;
    color: white;
    margin: 4%;
}

.title {
    text-align: center;
    border: 2px solid white;
    padding: 20px;
    border-radius: 15px;
    max-width: 350px!important;
    margin-bottom: 20px;
    display: block;
}

.container-form {
    text-align:left!important;
    border: 2px solid white;
    padding: 20px;
    border-radius: 15px;
    min-width: 400px!important;
    max-width: 1000px!important;
    width: 100%;
    margin-bottom: 20px;
    display: block;
}
.userid {
    text-align: center;
}

.contact-title {
    font-size: 200%;
    font-weight: 700;
    margin-top: 0;
    margin-bottom: 0;
}

label {
    font-size: 1rem;
    margin-bottom: 5px;
    padding-right: 5px;
    padding-left: 5px;
}


textarea {
    width: 100%;
    max-width: 100%;
    padding: 10px;
    margin-bottom: 15px;
    border: 1px solid #ddd;
    border-radius: 5px;
    color: white;
    background-color: transparent;
    box-sizing: border-box;
}
input {
    width: 40%;
    max-width: 100%;
    padding: 10px;
    margin-bottom: 15px;
    border: 1px solid #ddd;
    border-radius: 5px;
    color: white;
    background-color: transparent;
    box-sizing: border-box;
}

#message {
    height: 20vh;
    max-height: 30vh;
}

button {
    background-color: transparent;
    color: white!important;
    padding: 10px 15px;
    border: 1px solid white;
    border-radius: 5px!important;
    cursor: pointer;
    transition: color 0.5s ease, background-color 0.5s ease;
}

button:hover {
    color: black!important;
    background-color: #ddd!important;
}

.success-message {
    color: #39FF14;
}

.fail-message {
    color: #FF2c2c;
}

